--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
 <body>
   <!-- hero section start -->
-  <div style="background-image: url(../assets/images/banner-bg-image.png);" class="ct-banner">
+  <div style="background-image: url(./assets/images/banner-bg-image.png);" class="ct-banner">
     <div class="ct-header">
       <div class="content-wrapper">
         <div class="ct-header__logo">
-          <img src="../assets/images/Logo.png" alt="">
+          <img src="./assets/images/Logo.png" alt="">
         </div>
       </div>
     </div>
@@ -39,19 +39,19 @@
           <div class="ct-slider">
             <div class="ct-slide">
               <div class="ct-slide__image">
-                <img src="../assets/images/hero-image.png" alt="">
+                <img src="./assets/images/hero-image.png" alt="">
               </div>
             </div>
 
             <div class="ct-slide">
               <div class="ct-slide__image">
-                <img src="../assets/images/hero-image.png" alt="">
+                <img src="./assets/images/hero-image.png" alt="">
               </div>
             </div>
 
             <div class="ct-slide">
               <div class="ct-slide__image">
-                <img src="../assets/images/hero-image.png" alt="">
+                <img src="./assets/images/hero-image.png" alt="">
               </div>
             </div>
           </div>
